<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_phone">Sign in with Phone</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="client_id">283574983692-mfqdnpaa7k83o3hnpbskaef8d348en0a.apps.googleusercontent.com"</string>
    <string name="furniture_name">Furniture Name</string>
    <string name="price">Price</string>
    <string name="user_example_com">user@example.com</string>
    <string name="navigation_drawer_open">Open Navigation</string>
    <string name="navigation_drawer_close">Close Navigation</string>
    <string name="profile_page">Profile Page</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="view_in_ar">View in AR</string>
    <string name="profile">Profile</string>
    <string name="wishlist">Wishlist</string>
    <string name="orders">Orders</string>
    <string name="logout">Logout</string>
    <string name="your_wishlist_is_empty">Your wishlist is empty.</string>
    <string name="your_cart_is_empty">Your cart is empty.</string>
    <string name="product_name">Product Name</string>
    <string name="category">Category</string>
    <string name="remove">Remove</string>
    <string name="orders_page">Orders Page</string>
    <string name="cart">Cart</string>

</resources>